# uDOS-wizard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
@dev/: README.md  devlog.md
config/: environment.example.env
contracts/: orchestration-contract.json  uhome-network-policy-contract.json  uhome-network-policy.schema.json  wizard-broker-contract.json
docs/: BUDGET-POLICY.md  OK-AGENT-MCP-ARCHITECTURE.md  OK-AGENT-PROVIDERS.md  OK-AGENT-WIZARD-CONTRACT.md  OK-PROVIDER-ROUTING-ENGINE.md  README.md  SCHEDULING-POLICY.md  WIZARD-BUDGETING-AND-APPROVAL-POLICY.md  activation.md  architecture.md  beacon-notes.md  boundary.md  examples.md  first-launch-quickstart.md  getting-started.md  google-mvp-empire-lane.md  gui-assessment-and-plan.md  surface-transition.md  v2.0.1-orchestration-foundation.md  v2.0.2-runtime-service-consumption.md  v2.0.3-port-binding.md  v2.0.3-render-preview-consumption.md  v2.0.4-mcp-vscode-integration-design.md  v2.0.4-network-boundary-lock.md  v2.0.4-secret-backed-bridge-lanes.md  v2.0.4-sibling-route-set.md  v2.2-mcp-vscode-activation.md  wizard-boundary.md  wizard-broker.md
examples/: basic-wizard-session.md
mcp/: README.md  vscode-http-client-profile.json
scripts/: README.md  run-wizard-checks.sh
static/: surface-gui.js  thin-gui.html  wizard-gui.html  wizard-gui.js
tests/: README.md  test_api_contracts.py  test_mcp_registry.py
udos_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
wiki/: README.md  unit-01-wizard-basics.md
wizard/: assist.py  broker.py  demo.py  family_health.py  google_mvp.py  main.py  (+6 more)
(+61 files in other folders)
