[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udos-wizard"
version = "0.2.0"
description = "uDOS wizard service and AI/network kernel starter"
requires-python = ">=3.11"
dependencies = ["cryptography", "fastapi", "uvicorn"]

[project.scripts]
udos-wizard = "wizard.main:run"
udos-wizard-demo = "wizard.demo:main"

[tool.setuptools.packages.find]
include = ["wizard*"]
